# scop2flop

./: .gitignore  CMakeLists.txt  README.md  flake.nix
cmake/: clan.cmake  osl.cmake  polylib.cmake
src/: main.c
